<resources>
    <string name="app_name">"HumbeeRunner "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_create_account">No tienes una cuenta? Crear nueva cuenta</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_account">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="action_forgot">Recuperar</string>
    <string name="password_forgot">Olvido su contraseña</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="resume_activity_forgot">Introduzca su nombre de usuario o email para recuperar su contraseña, se le enviará una nueva a su cuenta de correo.</string>
    <string name="prompt_activity_forgot_send">Se ha enviado una nueva contraseña a su cuenta de correo</string>

    <!-- Strings related to customer -->
    <string name="prompt_username">Nombre de usuario/Email</string>
    <string name="prompt_useremail">Email del usuario</string>
    <string name="prompt_userpassword">Inserte una clave</string>
    <string name="prompt_usertype">Tipo de usuario</string>
    <string name="title_activity_maps">Map</string>


</resources>
